# superintendent

./: .coveragerc  .dockerignore  .gitignore  .isort.cfg  .pre-commit-config.yaml  .readthedocs.yaml  .readthedocs.yml  .sml-sync.conf  .travis.yml  Makefile  README.md  example_test.csv  examples.ipynb  pyproject.toml  setup.cfg  setup.py  test.ipynb
.github/workflows/: build.yml  main.yml  test.yml
api/: app.py  errors.py  example_destroy_init.py  example_init.py
binder/: postBuild  requirements.txt
docs/: Makefile  _cluster_docs.ipynb  _labelling-data.ipynb  active-learning.ipynb  active-learning.md  conf.py  custom-input.md  demo.db  distributing-labelling.ipynb  distributing-labelling.md  examples.md  index.md  index.rst  installation.md  labelling-data.ipynb  labelling-data.md  modularity.ipynb  notes.txt  requirements.txt
docs/api/: index.md  modules.rst  superintendent.rst
docs/examples/: index.md  labelling-images-actively.md  labelling-images.ipynb  labelling-images.md  labelling-text.ipynb  labelling-text.md  preprocessing-data.ipynb  preprocessing-data.md
docs/examples/docker-compose/: docker-compose.yml  docker-requirements.txt  index.md  orchestrate.py  tensorflow.Dockerfile  voila-interface.ipynb  voila.Dockerfile
src/superintendent/: __init__.py  _clustersupervisor.py  _compatibility.py  base.py  class_labeller.py  db_queue.py  display.py  multiclass_labeller.py  queueing_utils.py  semisupervisor.py  validation.py  version.py
src/superintendent/acquisition_functions/: __init__.py  decorators.py  functions.py
src/superintendent/controls/: __init__.py  base.py  buttongroup.py  multiclasssubmitter.py  submitter.py  timer.py  togglebuttongroup.py
src/superintendent/display/: __init__.py  image.py
src/superintendent/distributed/: __init__.py  class_labeller.py  mixin.py  multiclass_labeller.py  queueing.py  semisupervisor.py
src/superintendent/experiments/: __init__.py
src/superintendent/queueing/: __init__.py  base.py  in_memory.py  utils.py
superintendent/: __init__.py  base.py  clustersupervisor.py  controls.py  display.py  display_functions.py  iterating.py  iterator_functions.py  multioutput.py  prioritisation.py  queueing.py  semisupervisor.py  validation.py  version.py
superintendent/acquisition_functions/: __init__.py
superintendent/controls/: __init__.py  base.py  buttongroup.py  dropdownbutton.py  hintedmultiselect.py  keycapture.py  multiclasssubmitter.py  submitter.py  timer.py  togglebuttongroup.py
superintendent/display/: __init__.py  image.py
superintendent/distributed/: __init__.py  base.py  dbqueue.py  multioutput.py  semisupervisor.py  serialization.py
superintendent/multioutput/: __init__.py  multilabeller.py  prioritisation.py
superintendent/queueing/: base.py  cluster_queue.py  utils.py
tests/: _display.py  conftest.py  test_acquisition.py  test_base.py  test_class_labeller.py  test_cluster_queue.py  test_clustersupervisor.py  test_db_queue.py  test_dbqueue.py  test_display.py  test_distributed_multilabeller.py  test_distributed_semisupervisor.py  test_feature_conversion.py  test_iteration.py  test_multiclass_labeller.py  test_multilabeller.py  test_multioutput_prioritisation.py  test_prioritisation.py  test_queueing.py  test_semisupervisor.py  test_serialisation.py  test_simple_labelling_queue.py  test_validation.py
tests/controls/: test_buttongroup.py  test_dropdownbutton.py  test_hintedmultiselect.py  test_multiclasssubmitter.py  test_submitter.py  test_timer.py  test_togglebuttongroup.py
tests/distributed/: test_dbqueue.py  test_dist_class_labeller.py  test_dist_multiclass_labeller.py  test_dist_queueing.py  test_distributed_semisupervisor.py  test_distributed_serialisation.py  test_serialisation.py
