[tool.black]
line-length = 79

[tool.poetry]
name = "superintendent"
version = "0.4.2"
description = "Interactive machine learning supervision."
authors = ["Jan Freyberg <jan.freyberg@gmail.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://www.janfreyberg.com/superintendent"
repository = "https://github.com/janfreyberg/superintendent"
keywords = ["widgets", "labelling", "annotation"]
classifiers = [
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Science/Research",
    "Framework :: Jupyter",
]

[tool.poetry.dependencies]
python = "^3.5"
ipywidgets = "^7.4"
ipyevents = "^0.4.1"
numpy = "^1.16"
pandas = "^0.24.2"
matplotlib = "^3.0"
scikit-learn = "^0.20.3"
scipy = "^1.2"
schedule = "^0.6.0"
sqlalchemy = "^1.3"
cachetools = "^3.1"
psycopg2-binary = "^2.8"
flask = "^1.0"

[tool.poetry.dev-dependencies]
jupyterlab = "^0.35.4"
pytest = "^4.4"
hypothesis = "^4.17"
pytest-helpers-namespace = "^2019.1"
pytest-mock = "^1.10"
nbconvert = "^5.4"
jupyter = "^1.0"
pytest-cov = "^2.6"
coveralls = "^1.7"
requests = "^2.21"
html5lib = "^1.0"
bs4 = "^0.0.1"
wordcloud = "^1.5"
m2r = "^0.2.1"
sphinx_rtd_theme = "^0.4.3"
jupyter_sphinx = "^0.1.4"
sphinx = "^2.0"
nbsphinx = "^0.4.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
