[tool.black]
line-length = 79

[build-system]
requires = ["flit_core >=2,<3"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "superintendent"
author = "Jan Freyberg"
author-email = "jan.freyberg@gmail.com"
home-page = "https://github.com/janfreyberg/superintendent"
description-file = "README.md"
classifiers = [
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Science/Research",
    "Framework :: Jupyter",
]
license = "MIT"
keywords = "widgets labelling annotation"
requires-python = ">=3.6"
requires = [
    "ipywidgets>=7.4",
    "numpy>=1.15",
    "pandas>=0.24.0",
    "scikit-learn>=0.20.3",
    "scipy>=1.2",
    "schedule>=0.6.0",
    "sqlalchemy>=1.3",
    "Pillow",
    "cachetools>=3.1",
    "psycopg2-binary>=2.8",
    "flask>=1.0",
    "ipyevents>=0.6.0",
    "typing-extensions"
]

[tool.flit.metadata.requires-extra]
dev = [
    "jupyterlab>=1.1",
    "rope",
    "docargs",
    "black>=19.3b0",
    "flake8>=3.7",
]
test = [
    "isort>=4.3.21",
    "pytest>=4.1",
    "pytest-cov>=2.6",
    "hypothesis>=4.17",
    "pytest-helpers-namespace>=2019.1",
    "pytest-mock>=1.10",
    "nbconvert>=5.4",
    "coveralls>=1.7",
]
doc = [
    "sphinx>=2.0",
    "requests>=2.21",
    "html5lib>=1.0",
    "bs4>=0.0.1",
    "wordcloud>=1.5",
    "m2r>=0.2.1",
    "sphinx_rtd_theme>=0.4.3",
    "jupyter-sphinx>=0.1.4",
    "nbsphinx>=0.4.2",
    "sphinx-automodapi"
]
examples = [
    "requests>=2.21",
    "html5lib>=1.0",
    "bs4>=0.0.1",
    "wordcloud>=1.5",
]
