[tool.black]
line-length = 88

[tool.isort]
skip=["tests/", ".venv/"]


[build-system]
requires = ["flit_core >=2,<3"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "superintendent"
author = "Jan Freyberg"
author-email = "jan.freyberg@gmail.com"
home-page = "https://github.com/janfreyberg/superintendent"
description-file = "README.md"
classifiers = [
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Science/Research",
    "Framework :: Jupyter",
]
license = "MIT"
keywords = "widgets labelling annotation"
requires-python = ">=3.6"
requires = [
    "ipywidgets>=7.4",
    "numpy>=1.15",
    "pandas>=0.24.0",
    "scikit-learn>=0.20.3",
    "scipy>=1.2",
    "sqlalchemy>=1.3",
    "Pillow",
    "cachetools>=3.1",
    "psycopg2-binary>=2.8",
    "ipyevents>=0.6.0",
    "typing-extensions",
    "sqlmodel",
    "codetiming>=1.3.0",
]

[tool.flit.metadata.requires-extra]
dev = [
    "jupyterlab>=3.0",
    "rope",
]
test = [
    "isort>=4.3.21",
    "pytest>=4.1",
    "pytest-cov>=2.6",
    "hypothesis>=4.17",
    "pytest-helpers-namespace>=2019.1",
    "pytest-mock>=1.10",
    "nbconvert>=5.4",
    "coveralls>=1.7",
    "docargs>=0.2.0",
    "black>=19.3b0",
    "flake8>=3.7",
    "mypy",
    "types-cachetools",
]
doc = [
    "sphinx>=4.0",
    "requests>=2.21",
    "html5lib>=1.0",
    "bs4>=0.0.1",
    "wordcloud>=1.5",
    "myst-parser>=0.18.0",
    "sphinx_rtd_theme>=0.4.3",
    "jupyter-sphinx>=0.1.4",
    "nbsphinx>=0.4.2",
    "sphinx-automodapi",
    "ipyannotations>=0.5.1"
]
examples = ["requests>=2.21", "html5lib>=1.0", "bs4>=0.0.1", "wordcloud>=1.5"]

[tool.flit.sdist]
include = ["src/", "tests/"]
exclude = ["docs/"]
